Edit research presentation description
Removed 'evidence-informed' from the description of Hajarimino Rakotomanana's research.

--- a/_posts/2025-11-21-post.md
+++ b/_posts/2025-11-21-post.md
@@ -10,6 +10,6 @@ tags:
   - symposium
 ---
 
-Hajarimino Rakotomanana presented his research on early autism detection at the New Brunswick Health Research Symposium in Fredericton. His work investigates AI-based approaches for identifying early behavioral and developmental indicators using multimodal data, with the goal of supporting accessible, evidence-informed screening tools.
+Hajarimino Rakotomanana presented his research on early autism detection at the New Brunswick Health Research Symposium in Fredericton. His work investigates AI-based approaches for identifying early behavioral and developmental indicators using multimodal data, with the goal of supporting accessible screening tools.
 
 ![Hajarimino Rakotomanana presenting at the NB Health Research Symposium in Fredericton]({{ "images/posts/hajarimino-nb-symposium.jpg" | relative_url }})
